--- a/notebooks/1.0_ego_SalesPricePredict.ipynb
+++ b/notebooks/1.0_ego_SalesPricePredict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "ae6d0db0-4c7b-4ded-b92a-9319dde7ad8d",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "464658ea-8022-4e8d-bdf2-cbb70d71c719",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "eb9e9653-14ed-498d-a308-fe3484f66200",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c36e9cd2-a1ba-43e4-9358-327a1456bd25",
    "metadata": {},
    "outputs": [],
@@ -64,19 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "faa5e5d1-c05b-4507-816e-eb8f69ccc818",
    "metadata": {},
    "outputs": [],
    "source": [
     "#product_name\n",
     "products_list_link=products.find_all('a', class_='link')\n",
-    "product_category=[p.get_text() for p in products_list_link]"
+    "product_name=[p.get_text() for p in products_list_link]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "130e96a9-2e4b-49bd-be3a-5e5440950167",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "04814c5e-a253-45ac-9522-6a4d729c1e51",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "7511c0b9-d88a-485b-8c80-da052af23ba0",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "596edbc2-0ba0-4d9f-bb7f-2e9c363a8f56",
    "metadata": {},
    "outputs": [],
@@ -119,18 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "021111d6-25a7-4642-a13a-e2e7e8443f45",
    "metadata": {},
    "outputs": [],
    "source": [
     "#scrapy datetime\n",
-    "data['scrapy_datetime']=datetime.now().strftime('%Y-%m-%d- %H%M%M')"
+    "data['scrapy_datetime']=datetime.now().strftime('%Y-%m-%d- %H%M%S')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "032c896c-495b-4bc3-9ecd-c8e1bdbe2c37",
    "metadata": {},
    "outputs": [
@@ -166,64 +166,57 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0985159001</td>\n",
-       "      <td>men_jeans_skinny</td>\n",
+       "      <td>Skinny Jeans</td>\n",
        "      <td>Skinny Jeans</td>\n",
        "      <td>$ 19.99</td>\n",
-       "      <td>2021-09-24- 132828</td>\n",
+       "      <td>2021-09-24- 133458</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0985197001</td>\n",
-       "      <td>men_jeans_slim</td>\n",
+       "      <td>Slim Jeans</td>\n",
        "      <td>Slim Jeans</td>\n",
        "      <td>$ 19.99</td>\n",
-       "      <td>2021-09-24- 132828</td>\n",
+       "      <td>2021-09-24- 133458</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0690449051</td>\n",
-       "      <td>men_jeans_ripped</td>\n",
+       "      <td>Skinny Jeans</td>\n",
        "      <td>Skinny Jeans</td>\n",
        "      <td>$ 39.99</td>\n",
-       "      <td>2021-09-24- 132828</td>\n",
+       "      <td>2021-09-24- 133458</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0690449022</td>\n",
-       "      <td>men_jeans_ripped</td>\n",
+       "      <td>Skinny Jeans</td>\n",
        "      <td>Skinny Jeans</td>\n",
        "      <td>$ 39.99</td>\n",
-       "      <td>2021-09-24- 132828</td>\n",
+       "      <td>2021-09-24- 133458</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0985197003</td>\n",
-       "      <td>men_jeans_slim</td>\n",
+       "      <td>Slim Jeans</td>\n",
        "      <td>Slim Jeans</td>\n",
        "      <td>$ 19.99</td>\n",
-       "      <td>2021-09-24- 132828</td>\n",
+       "      <td>2021-09-24- 133458</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   product_id  product_category  product_name product_price  \\\n",
-       "0  0985159001  men_jeans_skinny  Skinny Jeans       $ 19.99   \n",
-       "1  0985197001    men_jeans_slim    Slim Jeans       $ 19.99   \n",
-       "2  0690449051  men_jeans_ripped  Skinny Jeans       $ 39.99   \n",
-       "3  0690449022  men_jeans_ripped  Skinny Jeans       $ 39.99   \n",
-       "4  0985197003    men_jeans_slim    Slim Jeans       $ 19.99   \n",
-       "\n",
-       "      scrapy_datetime  \n",
-       "0  2021-09-24- 132828  \n",
-       "1  2021-09-24- 132828  \n",
-       "2  2021-09-24- 132828  \n",
-       "3  2021-09-24- 132828  \n",
-       "4  2021-09-24- 132828  "
+       "   product_id product_category  product_name product_price     scrapy_datetime\n",
+       "0  0985159001     Skinny Jeans  Skinny Jeans       $ 19.99  2021-09-24- 133458\n",
+       "1  0985197001       Slim Jeans    Slim Jeans       $ 19.99  2021-09-24- 133458\n",
+       "2  0690449051     Skinny Jeans  Skinny Jeans       $ 39.99  2021-09-24- 133458\n",
+       "3  0690449022     Skinny Jeans  Skinny Jeans       $ 39.99  2021-09-24- 133458\n",
+       "4  0985197003       Slim Jeans    Slim Jeans       $ 19.99  2021-09-24- 133458"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
