scrap code finished

--- a/notebooks/1.0_ego_SalesPricePredict.ipynb
+++ b/notebooks/1.0_ego_SalesPricePredict.ipynb
@@ -17,8 +17,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4006033b-ad45-489d-bb1c-bcafe765144e",
+   "metadata": {},
+   "source": [
+    "## Extracting the showroom"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 79,
    "id": "ef1ffb59-3051-4494-9f03-ac85ef7c86e5",
    "metadata": {},
    "outputs": [
@@ -28,7 +36,7 @@
        "'https://www2.hm.com/en_us/men/products/jeans.html?page-size=108'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 80,
    "id": "464658ea-8022-4e8d-bdf2-cbb70d71c719",
    "metadata": {},
    "outputs": [],
@@ -62,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 81,
    "id": "e19e4fc9-151a-4cb5-9891-63ba2ccc6278",
    "metadata": {},
    "outputs": [],
@@ -78,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 82,
    "id": "faa5e5d1-c05b-4507-816e-eb8f69ccc818",
    "metadata": {},
    "outputs": [],
@@ -90,19 +98,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 83,
    "id": "130e96a9-2e4b-49bd-be3a-5e5440950167",
    "metadata": {},
    "outputs": [],
    "source": [
     "#product_price\n",
-    "product_list_spam = products.find_all('span', class_ = 'price regular')\n",
-    "product_price = [p.get_text() for p in product_list_spam]"
+    "product_list_span = products.find_all('span', class_ = 'price regular')\n",
+    "product_price = [p.get_text() for p in product_list_span]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 84,
    "id": "596edbc2-0ba0-4d9f-bb7f-2e9c363a8f56",
    "metadata": {},
    "outputs": [],
@@ -113,18 +121,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 85,
    "id": "021111d6-25a7-4642-a13a-e2e7e8443f45",
    "metadata": {},
    "outputs": [],
    "source": [
     "#scrapy datetime\n",
-    "data['scrapy_datetime'] = datetime.now().strftime('%Y-%m-%d- %H:%M:%S')"
+    "data['scrapy_datetime'] = datetime.now().strftime('%Y-%m-%d %H:%M:%S')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 86,
    "id": "032c896c-495b-4bc3-9ecd-c8e1bdbe2c37",
    "metadata": {},
    "outputs": [],
@@ -134,124 +142,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "7010cc8d-c372-47ad-99c4-41d592f49ebf",
+   "cell_type": "markdown",
+   "id": "d39bc9c2-083e-4763-b2b6-b6715c0dacde",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>product_category</th>\n",
-       "      <th>product_name</th>\n",
-       "      <th>product_price</th>\n",
-       "      <th>scrapy_datetime</th>\n",
-       "      <th>style_code</th>\n",
-       "      <th>color_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0985197001</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>Slim Jeans</td>\n",
-       "      <td>$ 19.99</td>\n",
-       "      <td>2021-09-28- 09:17:23</td>\n",
-       "      <td>0985197</td>\n",
-       "      <td>001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0985159001</td>\n",
-       "      <td>men_jeans_skinny</td>\n",
-       "      <td>Skinny Jeans</td>\n",
-       "      <td>$ 19.99</td>\n",
-       "      <td>2021-09-28- 09:17:23</td>\n",
-       "      <td>0985159</td>\n",
-       "      <td>001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0985197003</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>Slim Jeans</td>\n",
-       "      <td>$ 19.99</td>\n",
-       "      <td>2021-09-28- 09:17:23</td>\n",
-       "      <td>0985197</td>\n",
-       "      <td>003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0985197005</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>Slim Jeans</td>\n",
-       "      <td>$ 19.99</td>\n",
-       "      <td>2021-09-28- 09:17:23</td>\n",
-       "      <td>0985197</td>\n",
-       "      <td>005</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0985197007</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>Slim Jeans</td>\n",
-       "      <td>$ 19.99</td>\n",
-       "      <td>2021-09-28- 09:17:23</td>\n",
-       "      <td>0985197</td>\n",
-       "      <td>007</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   product_id  product_category  product_name product_price  \\\n",
-       "0  0985197001    men_jeans_slim    Slim Jeans       $ 19.99   \n",
-       "1  0985159001  men_jeans_skinny  Skinny Jeans       $ 19.99   \n",
-       "2  0985197003    men_jeans_slim    Slim Jeans       $ 19.99   \n",
-       "3  0985197005    men_jeans_slim    Slim Jeans       $ 19.99   \n",
-       "4  0985197007    men_jeans_slim    Slim Jeans       $ 19.99   \n",
-       "\n",
-       "        scrapy_datetime style_code color_id  \n",
-       "0  2021-09-28- 09:17:23    0985197      001  \n",
-       "1  2021-09-28- 09:17:23    0985159      001  \n",
-       "2  2021-09-28- 09:17:23    0985197      003  \n",
-       "3  2021-09-28- 09:17:23    0985197      005  \n",
-       "4  2021-09-28- 09:17:23    0985197      007  "
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "data.head()"
+    "## Extracting product details"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 87,
    "id": "2e940577-a423-4e21-8d1d-8f1d7aa94087",
    "metadata": {},
    "outputs": [],
@@ -309,191 +209,25 @@
     "    ## Merging DataFrames\n",
     "    data_sku = pd.merge(df_color, df_composition[['style_code', 'Art. No.', 'Composition', 'Fit', 'More sustainable materials', 'Size']], how = 'left', on = 'style_code')\n",
     "    \n",
-    "    df_details = pd.concat([df_details, data_sku], axis = 0)\n",
-    "    \n",
-    "# Join showroom + details\n",
+    "    df_details = pd.concat([df_details, data_sku], axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62cb423d-2569-4144-b916-e6cf6fbfb7de",
+   "metadata": {},
+   "source": [
+    "## Join showroom + details"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94db5007-53e1-49e6-a38e-276103749252",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data_raw = pd.merge(data, df_details[['style_code', 'color_name', 'Fit', 'Composition', 'Size']], how = 'left', on = 'style_code')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "43a315b7-23a8-42f3-992c-c5bc40efb0a6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Art. No.',\n",
-       " 'Composition',\n",
-       " 'Fit',\n",
-       " 'More sustainable materials',\n",
-       " 'Size',\n",
-       " 'color_id',\n",
-       " 'style_code'}"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set (aux)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "951d8daa-b68c-427c-9367-62058375a90b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>product_category</th>\n",
-       "      <th>product_name</th>\n",
-       "      <th>product_price</th>\n",
-       "      <th>scrapy_datetime</th>\n",
-       "      <th>style_code</th>\n",
-       "      <th>color_id</th>\n",
-       "      <th>color_name</th>\n",
-       "      <th>Fit</th>\n",
-       "      <th>Composition</th>\n",
-       "      <th>Size</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0985197001</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>Slim Jeans</td>\n",
-       "      <td>$ 19.99</td>\n",
-       "      <td>2021-09-28- 09:17:23</td>\n",
-       "      <td>0985197</td>\n",
-       "      <td>001</td>\n",
-       "      <td>Midnight blue</td>\n",
-       "      <td>Slim fit</td>\n",
-       "      <td>Pocket lining: Cotton 100%</td>\n",
-       "      <td>The model is 189cm/6'2\" and wears a size 32/32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0985197001</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>Slim Jeans</td>\n",
-       "      <td>$ 19.99</td>\n",
-       "      <td>2021-09-28- 09:17:23</td>\n",
-       "      <td>0985197</td>\n",
-       "      <td>001</td>\n",
-       "      <td>Midnight blue</td>\n",
-       "      <td>Slim fit</td>\n",
-       "      <td>Shell: Cotton 98%, Elastane 2%</td>\n",
-       "      <td>The model is 189cm/6'2\" and wears a size 32/32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0985197001</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>Slim Jeans</td>\n",
-       "      <td>$ 19.99</td>\n",
-       "      <td>2021-09-28- 09:17:23</td>\n",
-       "      <td>0985197</td>\n",
-       "      <td>001</td>\n",
-       "      <td>Denim blue</td>\n",
-       "      <td>Slim fit</td>\n",
-       "      <td>Pocket lining: Cotton 100%</td>\n",
-       "      <td>The model is 189cm/6'2\" and wears a size 32/32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0985197001</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>Slim Jeans</td>\n",
-       "      <td>$ 19.99</td>\n",
-       "      <td>2021-09-28- 09:17:23</td>\n",
-       "      <td>0985197</td>\n",
-       "      <td>001</td>\n",
-       "      <td>Denim blue</td>\n",
-       "      <td>Slim fit</td>\n",
-       "      <td>Shell: Cotton 98%, Elastane 2%</td>\n",
-       "      <td>The model is 189cm/6'2\" and wears a size 32/32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0985197001</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>Slim Jeans</td>\n",
-       "      <td>$ 19.99</td>\n",
-       "      <td>2021-09-28- 09:17:23</td>\n",
-       "      <td>0985197</td>\n",
-       "      <td>001</td>\n",
-       "      <td>Dark denim blue</td>\n",
-       "      <td>Slim fit</td>\n",
-       "      <td>Pocket lining: Cotton 100%</td>\n",
-       "      <td>The model is 189cm/6'2\" and wears a size 32/32</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   product_id product_category product_name product_price  \\\n",
-       "0  0985197001   men_jeans_slim   Slim Jeans       $ 19.99   \n",
-       "1  0985197001   men_jeans_slim   Slim Jeans       $ 19.99   \n",
-       "2  0985197001   men_jeans_slim   Slim Jeans       $ 19.99   \n",
-       "3  0985197001   men_jeans_slim   Slim Jeans       $ 19.99   \n",
-       "4  0985197001   men_jeans_slim   Slim Jeans       $ 19.99   \n",
-       "\n",
-       "        scrapy_datetime style_code color_id       color_name       Fit  \\\n",
-       "0  2021-09-28- 09:17:23    0985197      001    Midnight blue  Slim fit   \n",
-       "1  2021-09-28- 09:17:23    0985197      001    Midnight blue  Slim fit   \n",
-       "2  2021-09-28- 09:17:23    0985197      001       Denim blue  Slim fit   \n",
-       "3  2021-09-28- 09:17:23    0985197      001       Denim blue  Slim fit   \n",
-       "4  2021-09-28- 09:17:23    0985197      001  Dark denim blue  Slim fit   \n",
-       "\n",
-       "                      Composition  \\\n",
-       "0      Pocket lining: Cotton 100%   \n",
-       "1  Shell: Cotton 98%, Elastane 2%   \n",
-       "2      Pocket lining: Cotton 100%   \n",
-       "3  Shell: Cotton 98%, Elastane 2%   \n",
-       "4      Pocket lining: Cotton 100%   \n",
-       "\n",
-       "                                             Size  \n",
-       "0  The model is 189cm/6'2\" and wears a size 32/32  \n",
-       "1  The model is 189cm/6'2\" and wears a size 32/32  \n",
-       "2  The model is 189cm/6'2\" and wears a size 32/32  \n",
-       "3  The model is 189cm/6'2\" and wears a size 32/32  \n",
-       "4  The model is 189cm/6'2\" and wears a size 32/32  "
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_raw.head()"
    ]
   }
  ],
