data cleaning in progress

--- a/notebooks/1.0_ego_c02_cleaning_data.ipynb
+++ b/notebooks/1.0_ego_c02_cleaning_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "id": "ae6d0db0-4c7b-4ded-b92a-9319dde7ad8d",
    "metadata": {},
    "outputs": [],
@@ -35,8 +35,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 64,
    "id": "7b377317-8c69-476a-bf21-e7f161299616",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# **===================== Import dataset =====================**\n",
+    "data_raw = pd.read_csv('../datasets/data_raw_HM.csv')\n",
+    "data_raw = data_raw.rename(columns = {'Fit': 'fit', 'Composition': 'composition', 'Size': 'size'})\n",
+    "\n",
+    "# product_id\n",
+    "data_raw['product_id'] = data_raw['product_id'].astype(int)\n",
+    "\n",
+    "# product_name\n",
+    "data_raw['product_name'] = data_raw['product_name'].apply(lambda x: x.replace(' ', '_').lower())\n",
+    "\n",
+    "# product_price\n",
+    "data_raw['product_price'] = data_raw['product_price'].apply(lambda x: x.replace('$ ', ' ')).astype(float)\n",
+    "\n",
+    "# scrapy_datetime\n",
+    "data_raw['scrapy_datetime'] = pd.to_datetime(data_raw['scrapy_datetime'], format = '%Y-%m-%d %H:%M:%S')\n",
+    "\n",
+    "# style_code\n",
+    "data_raw['style_code'] = data_raw['style_code'].astype(int)\n",
+    "\n",
+    "# color_name\n",
+    "data_raw['color_name'] = data_raw['color_name'].apply(lambda x: x.replace(' ', '_').replace('/', '_').lower() if pd.notnull(x) else x)\n",
+    "\n",
+    "# fit\n",
+    "data_raw['fit'] = data_raw['fit'].apply(lambda x: x.replace(' ', '_').lower() if pd.notnull(x) else x)\n",
+    "\n",
+    "# Size --->>> size_model and size_number\n",
+    "# size_model\n",
+    "data_raw['size_model'] = data_raw['size'].apply(lambda x: re.search('\\d{3}cm', x).group(0) if pd.notnull(x) else x)\n",
+    "data_raw['size_model'] = data_raw['size_model'].apply(lambda x: re.search('\\d+', x).group(0) if pd.notnull(x) else x)\n",
+    "\n",
+    "# size_number\n",
+    "data_raw['size_number'] = data_raw['size'].str.extract('(\\d+/\\\\d+)')\n",
+    "\n",
+    "# Remove Size\n",
+    "data_raw = data_raw.drop(columns = ['size'], axis = 1)\n",
+    "\n",
+    "# ============================== Composition ============================== #\n",
+    "# For the first cycle, exclude secondary compositions\n",
+    "data_raw = data_raw[~data_raw['composition'].str.contains('Pocket lining:', na = False)]\n",
+    "data_raw = data_raw[~data_raw['composition'].str.contains('Pocket:', na = False)]\n",
+    "data_raw = data_raw[~data_raw['composition'].str.contains('Lining:', na = False)]\n",
+    "data_raw = data_raw[~data_raw['composition'].str.contains('Shell:', na = False)]\n",
+    "data_raw = data_raw.reset_index(drop = True)\n",
+    "\n",
+    "# Break composition by comma and create a new DataSet\n",
+    "data_composition = data_raw['composition'].str.split(',', expand = True)\n",
+    "\n",
+    "# Create a reference DataSet - Columns --> cotton | polyester | elastane | elasterell\n",
+    "data_composition_ref = pd.DataFrame(index = np.arange(len(data_raw)), columns = ['cotton', 'polyester', 'elastane', 'elasterell'])\n",
+    "\n",
+    "# cotton\n",
+    "data_cotton = data_composition[0]\n",
+    "data_cotton.name = 'cotton'\n",
+    "data_composition_ref = pd.concat([data_composition_ref, data_cotton], axis = 1)\n",
+    "data_composition_ref = data_composition_ref.iloc[:, ~data_composition_ref.columns.duplicated(keep = 'last')]\n",
+    "\n",
+    "# polyester\n",
+    "data_polyester = data_composition.loc[data_composition[1].str.contains('Polyester', na = True), 1]\n",
+    "data_polyester.name = 'polyester'\n",
+    "data_composition_ref = pd.concat([data_composition_ref, data_polyester], axis = 1)\n",
+    "data_composition_ref = data_composition_ref.iloc[:, ~data_composition_ref.columns.duplicated(keep = 'last')]\n",
+    "\n",
+    "# elastane \n",
+    "data_elastane = data_composition.loc[data_composition[1].str.contains('Elastane', na = True), 1]\n",
+    "data_elastane.name = 'elastane'\n",
+    "data_composition_ref = pd.concat([data_composition_ref, data_elastane], axis = 1)\n",
+    "data_composition_ref = data_composition_ref.iloc[:, ~data_composition_ref.columns.duplicated(keep = 'last')]\n",
+    "\n",
+    "# elasterell\n",
+    "data_elasterell = data_composition.loc[data_composition[1].str.contains('Elasterell', na = True), 1]\n",
+    "data_elasterell.name = 'elasterell'\n",
+    "data_composition_ref = pd.concat([data_composition_ref, data_elasterell], axis = 1)\n",
+    "data_composition_ref = data_composition_ref.iloc[:, ~data_composition_ref.columns.duplicated(keep = 'last')]\n",
+    "\n",
+    "# ============================== Join with Data Raw ============================== #\n",
+    "data_raw = pd.concat([data_raw, data_composition_ref], axis = 1)\n",
+    "\n",
+    "# format Composition data\n",
+    "data_raw['cotton'] = data_raw['cotton'].apply(lambda x: int(re.search('\\d+', x).group(0))/100 if pd.notnull(x) else x)\n",
+    "data_raw['polyester'] = data_raw['polyester'].apply(lambda x: int(re.search('\\d+', x).group(0))/100 if pd.notnull(x) else x)\n",
+    "data_raw['elastane'] = data_raw['elastane'].apply(lambda x: int(re.search('\\d+', x).group(0))/100 if pd.notnull(x) else x)\n",
+    "data_raw['elasterell'] = data_raw['elasterell'].apply(lambda x: int(re.search('\\d+', x).group(0))/100 if pd.notnull(x) else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "06b57859-3d5f-40c3-bcf7-0b7d290e1e1d",
    "metadata": {},
    "outputs": [
     {
@@ -68,87 +159,111 @@
        "      <th>style_code</th>\n",
        "      <th>color_id</th>\n",
        "      <th>color_name</th>\n",
-       "      <th>Fit</th>\n",
-       "      <th>Composition</th>\n",
+       "      <th>fit</th>\n",
+       "      <th>composition</th>\n",
        "      <th>size_model</th>\n",
        "      <th>size_number</th>\n",
+       "      <th>cotton</th>\n",
+       "      <th>polyester</th>\n",
+       "      <th>elastane</th>\n",
+       "      <th>elasterell</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>956</th>\n",
-       "      <td>1008549006</td>\n",
-       "      <td>men_jeans_regular</td>\n",
-       "      <td>regular_jeans</td>\n",
-       "      <td>19.99</td>\n",
-       "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>1008549</td>\n",
-       "      <td>6</td>\n",
-       "      <td>black</td>\n",
-       "      <td>regular_fit</td>\n",
-       "      <td>Shell: Cotton 98%, Elastane 2%</td>\n",
-       "      <td>189</td>\n",
-       "      <td>32/32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1946</th>\n",
-       "      <td>751994031</td>\n",
+       "      <th>2395</th>\n",
+       "      <td>636207010</td>\n",
        "      <td>men_jeans_slim</td>\n",
        "      <td>slim_jeans</td>\n",
+       "      <td>19.99</td>\n",
+       "      <td>2021-09-30 09:51:16</td>\n",
+       "      <td>636207</td>\n",
+       "      <td>10</td>\n",
+       "      <td>dark_gray_denim</td>\n",
+       "      <td>slim_fit</td>\n",
+       "      <td>Cotton 89%, Polyester 10%, Elastane 1%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>690449043</td>\n",
+       "      <td>men_jeans_ripped</td>\n",
+       "      <td>skinny_jeans</td>\n",
+       "      <td>39.99</td>\n",
+       "      <td>2021-09-30 09:51:16</td>\n",
+       "      <td>690449</td>\n",
+       "      <td>43</td>\n",
+       "      <td>light_denim_gray_trashed</td>\n",
+       "      <td>skinny_fit</td>\n",
+       "      <td>Cotton 98%, Elastane 2%</td>\n",
+       "      <td>184</td>\n",
+       "      <td>31/32</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2609</th>\n",
+       "      <td>636207015</td>\n",
+       "      <td>men_jeans_slim</td>\n",
+       "      <td>slim_jeans</td>\n",
+       "      <td>19.99</td>\n",
+       "      <td>2021-09-30 09:51:16</td>\n",
+       "      <td>636207</td>\n",
+       "      <td>15</td>\n",
+       "      <td>dark_denim_blue</td>\n",
+       "      <td>slim_fit</td>\n",
+       "      <td>Cotton 88%, Polyester 10%, Elastane 2%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1590</th>\n",
+       "      <td>636207011</td>\n",
+       "      <td>men_jeans_slim</td>\n",
+       "      <td>slim_jeans</td>\n",
+       "      <td>19.99</td>\n",
+       "      <td>2021-09-30 09:51:16</td>\n",
+       "      <td>636207</td>\n",
+       "      <td>11</td>\n",
+       "      <td>gray</td>\n",
+       "      <td>slim_fit</td>\n",
+       "      <td>Cotton 89%, Polyester 10%, Elastane 1%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2300</th>\n",
+       "      <td>811993031</td>\n",
+       "      <td>men_jeans_regular</td>\n",
+       "      <td>regular_jeans</td>\n",
        "      <td>29.99</td>\n",
        "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>751994</td>\n",
+       "      <td>811993</td>\n",
        "      <td>31</td>\n",
-       "      <td>dark_blue_denim</td>\n",
-       "      <td>slim_fit</td>\n",
+       "      <td>denim_blue</td>\n",
+       "      <td>regular_fit</td>\n",
        "      <td>Cotton 98%, Elastane 2%</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2179</th>\n",
-       "      <td>1008549004</td>\n",
-       "      <td>men_jeans_regular</td>\n",
-       "      <td>regular_jeans</td>\n",
-       "      <td>19.99</td>\n",
-       "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>1008549</td>\n",
-       "      <td>4</td>\n",
-       "      <td>black</td>\n",
-       "      <td>regular_fit</td>\n",
-       "      <td>Pocket lining: Polyester 63%, Cotton 37%</td>\n",
-       "      <td>189</td>\n",
-       "      <td>32/32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>985197001</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>slim_jeans</td>\n",
-       "      <td>19.99</td>\n",
-       "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>985197</td>\n",
-       "      <td>1</td>\n",
-       "      <td>dark_gray</td>\n",
-       "      <td>slim_fit</td>\n",
-       "      <td>Shell: Cotton 99%, Elastane 1%</td>\n",
-       "      <td>187</td>\n",
-       "      <td>31/32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154</th>\n",
-       "      <td>985197003</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>slim_jeans</td>\n",
-       "      <td>19.99</td>\n",
-       "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>985197</td>\n",
-       "      <td>3</td>\n",
-       "      <td>dark_gray</td>\n",
-       "      <td>slim_fit</td>\n",
-       "      <td>Pocket lining: Cotton 100%</td>\n",
-       "      <td>189</td>\n",
-       "      <td>32/32</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -156,71 +271,62 @@
       ],
       "text/plain": [
        "      product_id   product_category   product_name  product_price  \\\n",
-       "956   1008549006  men_jeans_regular  regular_jeans          19.99   \n",
-       "1946   751994031     men_jeans_slim     slim_jeans          29.99   \n",
-       "2179  1008549004  men_jeans_regular  regular_jeans          19.99   \n",
-       "83     985197001     men_jeans_slim     slim_jeans          19.99   \n",
-       "154    985197003     men_jeans_slim     slim_jeans          19.99   \n",
+       "2395   636207010     men_jeans_slim     slim_jeans          19.99   \n",
+       "62     690449043   men_jeans_ripped   skinny_jeans          39.99   \n",
+       "2609   636207015     men_jeans_slim     slim_jeans          19.99   \n",
+       "1590   636207011     men_jeans_slim     slim_jeans          19.99   \n",
+       "2300   811993031  men_jeans_regular  regular_jeans          29.99   \n",
        "\n",
-       "         scrapy_datetime  style_code  color_id       color_name          Fit  \\\n",
-       "956  2021-09-30 09:51:16     1008549         6            black  regular_fit   \n",
-       "1946 2021-09-30 09:51:16      751994        31  dark_blue_denim     slim_fit   \n",
-       "2179 2021-09-30 09:51:16     1008549         4            black  regular_fit   \n",
-       "83   2021-09-30 09:51:16      985197         1        dark_gray     slim_fit   \n",
-       "154  2021-09-30 09:51:16      985197         3        dark_gray     slim_fit   \n",
+       "         scrapy_datetime  style_code  color_id                color_name  \\\n",
+       "2395 2021-09-30 09:51:16      636207        10           dark_gray_denim   \n",
+       "62   2021-09-30 09:51:16      690449        43  light_denim_gray_trashed   \n",
+       "2609 2021-09-30 09:51:16      636207        15           dark_denim_blue   \n",
+       "1590 2021-09-30 09:51:16      636207        11                      gray   \n",
+       "2300 2021-09-30 09:51:16      811993        31                denim_blue   \n",
        "\n",
-       "                                   Composition size_model size_number  \n",
-       "956             Shell: Cotton 98%, Elastane 2%        189       32/32  \n",
-       "1946                   Cotton 98%, Elastane 2%        NaN         NaN  \n",
-       "2179  Pocket lining: Polyester 63%, Cotton 37%        189       32/32  \n",
-       "83              Shell: Cotton 99%, Elastane 1%        187       31/32  \n",
-       "154                 Pocket lining: Cotton 100%        189       32/32  "
+       "              fit                             composition size_model  \\\n",
+       "2395     slim_fit  Cotton 89%, Polyester 10%, Elastane 1%        NaN   \n",
+       "62     skinny_fit                 Cotton 98%, Elastane 2%        184   \n",
+       "2609     slim_fit  Cotton 88%, Polyester 10%, Elastane 2%        NaN   \n",
+       "1590     slim_fit  Cotton 89%, Polyester 10%, Elastane 1%        NaN   \n",
+       "2300  regular_fit                 Cotton 98%, Elastane 2%        NaN   \n",
+       "\n",
+       "     size_number  cotton  polyester  elastane  elasterell  \n",
+       "2395         NaN    0.89        0.1       NaN         NaN  \n",
+       "62         31/32    0.98        NaN      0.02         NaN  \n",
+       "2609         NaN    0.88        0.1       NaN         NaN  \n",
+       "1590         NaN    0.89        0.1       NaN         NaN  \n",
+       "2300         NaN    0.98        NaN      0.02         NaN  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# **=================== Import dataset ===================**\n",
-    "data_raw = pd.read_csv('../datasets/data_raw_HM.csv')\n",
-    "\n",
-    "# product_id\n",
-    "data_raw['product_id'] = data_raw['product_id'].astype(int)\n",
-    "\n",
-    "# product_name\n",
-    "data_raw['product_name'] = data_raw['product_name'].apply(lambda x: x.replace(' ', '_').lower())\n",
-    "\n",
-    "# product_price\n",
-    "data_raw['product_price'] = data_raw['product_price'].apply(lambda x: x.replace('$ ', ' ')).astype(float)\n",
-    "\n",
-    "# scrapy_datetime\n",
-    "data_raw['scrapy_datetime'] = pd.to_datetime(data_raw['scrapy_datetime'], format = '%Y-%m-%d %H:%M:%S')\n",
-    "\n",
-    "# style_code\n",
-    "data_raw['style_code'] = data_raw['style_code'].astype(int)\n",
-    "\n",
-    "# color_name\n",
-    "data_raw['color_name'] = data_raw['color_name'].apply(lambda x: x.replace(' ', '_').replace('/', '_').lower() if pd.notnull(x) else x)\n",
-    "\n",
-    "# fit\n",
-    "data_raw['Fit'] = data_raw['Fit'].apply(lambda x: x.replace(' ', '_').lower() if pd.notnull(x) else x)\n",
-    "\n",
-    "# composition\n",
-    "\n",
-    "# Size --->>> size_model and size_number\n",
-    "# size_model\n",
-    "data_raw['size_model'] = data_raw['Size'].apply(lambda x: re.search('\\d{3}cm', x).group(0) if pd.notnull(x) else x)\n",
-    "data_raw['size_model'] = data_raw['size_model'].apply(lambda x: re.search('\\d+', x).group(0) if pd.notnull(x) else x)\n",
-    "\n",
-    "# size_number\n",
-    "data_raw['size_number'] = data_raw['Size'].str.extract('(\\d+/\\\\d+)')\n",
-    "\n",
-    "# Remove Size\n",
-    "data_raw = data_raw.drop(columns = ['Size'], axis = 1)\n",
-    "\n",
     "data_raw.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "81669690-b700-436a-8bcd-9daabde08712",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2776, 16)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_raw.shape"
    ]
   }
  ],
